--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,5 @@ Make create account page, profile, and write page.
 
 Featured pages for takes and blogs -- format, then connect to databases through dynamic
 python (application.py)
+
+On Blogs, format similar to "meet the team"
